# detect

./: --rerun-tasks  .gitignore  README.md  build.gradle  shared-version.properties  x-application.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: stale.yml
buildSrc/: build.gradle
detectable/: build.gradle
docs/: ai-assist-ideation.md
documentation/: FluidTopicsControlFile.xml  keywords.ditamap  topics.ditamap
hackathon/: CACHE_CONFIG_BRIEF.md  DEMO_WALKTHROUGH.md  QUACKSTART_BRIEF.md
hackathon/demoBazelProject/: MODULE.bazel  WORKSPACE  maven_install.json
hackathon/demoBazelProject/myapp/: BUILD
hackathon/demoBazelProject/myapp/src/main/java/com/example/: App.java
hackathon/demoGradleProject/: build.gradle  settings.gradle
hackathon/demoGradleProject/api/: build.gradle
hackathon/demoGradleProject/core/: build.gradle
hackathon/demoGradleProject/integration-tests/: build.gradle
hackathon/demoMavenProject/: pom.xml
hackathon/demoMavenProject/api/: pom.xml
hackathon/demoMavenProject/core/: pom.xml
hackathon/demoMavenProject/integration-tests/: pom.xml
hackathon/demoMavenProject/test-utils/: pom.xml
hackathon/demoNugetProject/: DemoApp.sln
hackathon/demoNugetProject/DemoApp.Api/: DemoApp.Api.csproj  Program.cs
hackathon/demoNugetProject/DemoApp.Core/: DemoApp.Core.csproj  (+1 more)
hackathon/demoNugetProject/DemoApp.Core.Tests/: DemoApp.Core.Tests.csproj  OrderServiceTests.cs
latest/: 404.html  index.html
platform-1/: LICENSE  README.md  config.env  hardening_manifest.yaml.template  submit.sh
(+1073 files in other folders)
